# finance-assistant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt  skill.py
.claude/: settings.json
.finance/: finance.db  finance_profile.json
.finance/accounts/: accounts.json
.finance/accounts/transactions/: dkb-demo_2025.json  dkb-demo_2026.json
.finance/debt/: debts.json
.finance/goals/: goals.json
.finance/investments/: portfolio.json
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_locale.md
.github/workflows/: ci.yml
assets/: finance_dashboard_template.html
scripts/: benchmarks.py  budget_engine.py  csv_importer.py  currency.py  data_coach.py  data_safety.py  demo_data.py  doctor.py  finance_storage.py  goal_tracker.py  import_router.py  investment_returns.py  monte_carlo.py  net_worth_engine.py  onboarding.py  profile_manager.py  session_alerts.py  tax_engine.py  transaction_logger.py  workspace_builder.py
scripts/hooks/: auto_ingest.py
tests/: test_budget_engine.py  test_data_coach.py  test_import_system.py  test_investment_tracker.py
