[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "finance-assistant"
version = "3.2.0"
description = "Personal finance copilot for Claude Code"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "cryptography>=42.0.5,<45",
    "requests>=2.31.0,<3",
]

[project.optional-dependencies]
full = [
    "pdfplumber>=0.10.0,<1",
    "pytesseract>=0.3.10,<1",
    "Pillow>=10.0.0,<12",
    "ofxparse>=0.21,<1",
    "mt-940>=4.2.0,<5",
    "numpy>=1.26.0,<3",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
finance-assistant = "skill:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "locales*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
